Add classes to target elements in css

--- a/index.html
+++ b/index.html
@@ -7,12 +7,11 @@
     </head>
     <body>
         <h1>Help me choose between...</h1>
-        <img src="cat.jpg" alt="a cat">
-        <div>
-            <div>
+        <div class="inputSection">
+            <div class="inputs">
                 <input placeholder="Something"/>
             </div>
-            <button>Add</button>
+            <button class="addOption">Add</button>
         </div>
         <button>Go!</button>
     </body>
